--- a/style.css
+++ b/style.css
@@ -1,9 +1,19 @@
 @import url('reset.css');
 
+body {
+  background-color: black;
+}
 p {
   color: white;
 }
 
+.banner .logo img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  margin: auto;
+  padding: auto;
+}
 h1 {
   font-size: 40px;
   font-weight: 900;
@@ -14,6 +24,14 @@ h1 {
   text-align: center;
   color: transparent;
 }
+.banner{
+  background-image: linear-gradient(rgba(0, 0, 0, .6), rgba(49, 168, 221, .2), rgba(0, 0, 0, .6)), url('../images/banner.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  object-fit: contain;
+  padding: auto;
+  border-bottom: 1px solid #33A8DB80;
+}
 .banner .banner-content button {
   color: #31A8DD;
   font-size: 1rem;
@@ -23,6 +41,7 @@ h1 {
   width: 234px;
   padding: 16px 32px;
   text-transform: uppercase;
+  text-align: center;
   background-color: transparent;
   border-image: linear-gradient(#3BA1CD, #1572B7);
   border-image-slice: 10;
@@ -36,17 +55,36 @@ h2{
   height: 38px;
   width: 477px;
   letter-spacing: 4px;
+  text-align: center;
   margin-bottom: 24px;
   text-transform: uppercase;
   color: #33A8DB;
 }
 
+#transform-world {
+  height: 560px;
+  background-size: cover;
+  background-image: url("../images/woman-code.png");
+  background-attachment: fixed;
+  border: 1px 0px solid #33A8DB80;
+  padding: 200px;
+}
 #transform-world p {
   font-size: 40px;
   font-weight:900;
   line-height:46.96px;
   height: 141px;
   width: 244px;
+  text-align: right;
   color: #FFFFFF;
   text-shadow: 3px 2px #33A8DB;
 }
+
+.dio-logo {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  margin: auto;
+  padding: auto;
+}
+
