Footer and html texts update

--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body {
 p {
   color: white;
 }
+section {
+  margin: 100px auto;
+}
 
 .banner .logo img {
   width: 100%;
@@ -88,3 +91,19 @@ h2{
   padding: auto;
 }
 
+footer {
+  padding: 60px 0;
+  text-align: center;
+  background-image: linear-gradient(rgba(50, 168, 219, .0), rgba(50, 168, 219, .2));
+  border-top: 1px solid #33A8DB80;
+}
+
+footer .dio-logo {
+  width: 300px;
+}
+
+footer a {
+  color: #33A8DB;
+  font-weight: bold;
+  text-decoration: none;
+}
