--- a/style.css
+++ b/style.css
@@ -63,6 +63,16 @@ h2{
   text-transform: uppercase;
   color: #33A8DB;
 }
+#course-content .modules-list .module {
+  color: white;
+  width: 535px;
+  height: 51px;
+  margin: 0 auto 24px;
+  border: 1px solid #33A8DB;
+  background-color: #252525;
+  padding: 16px, 127px, 16px, 127px;
+  border-radius: 100px;
+  box-shadow: inset -5px 6px 8px rgba(0, 0, 0, .7);
 
 #transform-world {
   height: 560px;
@@ -84,24 +94,23 @@ h2{
 }
 
 .dio-logo {
-  width: 100%;
-  height: 100%;
+  width: 310px;
+  height: 44px;
+  top: 59px;
+  left: 565px;
   object-fit: contain;
   margin: auto;
   padding: auto;
 }
-
 footer {
   padding: 60px 0;
   text-align: center;
   background-image: linear-gradient(rgba(50, 168, 219, .0), rgba(50, 168, 219, .2));
   border-top: 1px solid #33A8DB80;
 }
-
 footer .dio-logo {
   width: 300px;
 }
-
 footer a {
   color: #33A8DB;
   font-weight: bold;
