--- a/style.css
+++ b/style.css
@@ -10,12 +10,28 @@ section {
   margin: 100px auto;
 }
 
+.banner {
+  background-image: linear-gradient(rgba(0, 0, 0, .6), rgba(49, 168, 221, .2), rgba(0, 0, 0, .6)), url('../images/banner.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 600px;
+  padding-top: 60px;
+  border-bottom: 1px solid #33A8DB80;
+}
+.banner .logo {
+  background-color: rgba(0, 0, 0, .2);
+  height: 260px;
+  width: 260px;
+  margin: auto;
+  border-radius: 50%;
+  padding: 16px;
+  margin-bottom: 16px;
+}
 .banner .logo img {
+  margin: auto;
   width: 100%;
   height: 100%;
   object-fit: contain;
-  margin: auto;
-  padding: auto;
 }
 h1 {
   font-size: 40px;
@@ -27,29 +43,29 @@ h1 {
   text-align: center;
   color: transparent;
 }
-.banner{
-  background-image: linear-gradient(rgba(0, 0, 0, .6), rgba(49, 168, 221, .2), rgba(0, 0, 0, .6)), url('../images/banner.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-  object-fit: contain;
-  padding: auto;
-  border-bottom: 1px solid #33A8DB80;
+.banner p {
+  font-size: 25px;
+  margin: 16px 0 24px;
+}
+.banner .banner-content {
+  color: white;
+  width: 600px;
+  margin: auto;
+  text-align: center;
 }
 .banner .banner-content button {
   color: #31A8DD;
-  font-size: 1rem;
+  font-size: 16px;
   font-weight: bold;
   letter-spacing: 4px;
-  height: 19px;
-  width: 234px;
   padding: 16px 32px;
   text-transform: uppercase;
-  text-align: center;
   background-color: transparent;
   border-image: linear-gradient(#3BA1CD, #1572B7);
   border-image-slice: 10;
   border-radius: 30px;
 }
+
 
 h2{
   font-size: 32px;
@@ -73,6 +89,7 @@ h2{
   padding: 16px, 127px, 16px, 127px;
   border-radius: 100px;
   box-shadow: inset -5px 6px 8px rgba(0, 0, 0, .7);
+}
 
 #transform-world {
   height: 560px;
@@ -82,6 +99,7 @@ h2{
   border: 1px 0px solid #33A8DB80;
   padding: 200px;
 }
+
 #transform-world p {
   font-size: 40px;
   font-weight:900;
@@ -108,9 +126,11 @@ footer {
   background-image: linear-gradient(rgba(50, 168, 219, .0), rgba(50, 168, 219, .2));
   border-top: 1px solid #33A8DB80;
 }
+
 footer .dio-logo {
   width: 300px;
 }
+
 footer a {
   color: #33A8DB;
   font-weight: bold;
