--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ section {
 }
 
 .banner {
-  background-image: linear-gradient(rgba(0, 0, 0, .6), rgba(49, 168, 221, .2), rgba(0, 0, 0, .6)), url('../images/banner.png');
+  background-image: linear-gradient(rgba(0, 0, 0, .6), rgba(49, 168, 221, .2), rgba(0, 0, 0, .6)), url('/assets/images/banner.png');
   background-size: cover;
   background-repeat: no-repeat;
   height: 600px;
@@ -67,7 +67,7 @@ section {
 }
 
 
-h2{
+.course-contnet h2{
   font-size: 32px;
   font-weight: 700;
   line-height: 37.57px;
@@ -83,7 +83,7 @@ h2{
 #transform-world {
   height: 560px;
   background-size: cover;
-  background-image: url("../images/woman-code.png");
+  background-image: url("/assets/images/woman-code.png");
   background-attachment: fixed;
   border: 1px 0px solid #33A8DB80;
   padding: 200px;
@@ -97,18 +97,10 @@ h2{
   text-align: center;
   color: #FFFFFF;
   text-shadow: 3px 2px #33A8DB;
+  text-transform: lowercase;
+  max-width: 250px;
+    
 
-}
-#professional-challenges {
-  text-align: center;
-  width: 800px;
-}
-#professional-challenges img {
-  margin: 32px 0;
-  width: 659px;
-  height: 419px;
-  top: 1685px;
-  left: 390px;
 }
 #course-content {
   width: 800px;
@@ -117,7 +109,6 @@ h2{
 
 #course-content .modules-list {
   margin: 24px 0;
-  text-align: center;
 }
 
 #course-content .modules-list .module {
@@ -135,6 +126,18 @@ h2{
   color: #33A8DB;
 }
 
+
+#professional-challenges {
+  text-align: center;
+  width: 800px;
+}
+#professional-challenges img {
+  margin: 32px 0;
+  width: 659px;
+  height: 419px;
+  top: 1685px;
+  left: 390px;
+}
 
 .dio-logo {
   width: 310px;
